--- a/moorfoadmin/templates/admin/actions.html
+++ b/moorfoadmin/templates/admin/actions.html
@@ -1,27 +1,20 @@
 {% load i18n addclass_tags %}
-<div class="row d-flex align-items-center justify-content-between pb-3">
+<div class="d-flex align-items-center justify-content-between actions">
     {% block actions %}
-    <div class="col input-group">
+    <div class="input-group">
+        <div class="input-group-text">
+            {% block actions-counter %}
+            {% if actions_selection_counter %}
+            <span class="action-counter" id="selected-count" data-actions-icnt="{{ cl.result_list|length }}">{{ selection_note }}</span>
+            {% endif %}
+        {% endblock %}
+        </div>
         {% block actions-form %}
         {% for field in action_form %}{{ field | addclass:"form-select" }}{% endfor %}
         {% endblock %}
         {% block actions-submit %}
         <button type="submit" class="input-group-text" title="{% translate " Run the selected action" %}" name="index"
             value="{{ action_index|default:0 }}">{% translate "Go" %}</button>
-        {% endblock %}
-    </div>
-    <div class="col">
-        {% block actions-counter %}
-            {% if actions_selection_counter %}
-            <span class="action-counter" data-actions-icnt="{{ cl.result_list|length }}">{{ selection_note }}</span>
-                {% if cl.result_count != cl.result_list|length %}
-                <span class="all hidden">{{ selection_note_all }}</span>
-                <span class="question hidden">
-                    <a href="#" title="{% translate " Click here to select the objects across all pages" %}">{% blocktranslate with cl.result_count as total_count %}Select all {{ total_count }} {{ module_name }}{% endblocktranslate %}</a>
-                </span>
-                <span class="clear hidden"><a href="#">{% translate "Clear selection" %}</a></span>
-                {% endif %}
-            {% endif %}
         {% endblock %}
     </div>
     {% endblock %}
