--- a/moorfoadmin/templates/admin/change_list.html
+++ b/moorfoadmin/templates/admin/change_list.html
@@ -1,6 +1,27 @@
 {% extends "admin/base_site.html" %}
 {% load i18n admin_urls static admin_list %}
 
+{% block extrastyle %}
+  {{ block.super }}
+  {% if cl.formset or action_form %}
+    <script src="{% url 'admin:jsi18n' %}"></script>
+  {% endif %}
+  {{ media.css }}
+  {% if not actions_on_top and not actions_on_bottom %}
+    <style>
+      #changelist table thead th:first-child {width: inherit}
+    </style>
+  {% endif %}
+{% endblock %}
+{% block js %}
+    {{ block.super }}
+    {{ media.js }}
+    <script src="{% static 'moorfoadmin/js/actions.js' %}"></script>
+    <script src="{% static 'admin/js/filters.js' %}" defer></script>
+{% endblock js %}
+{% block extrahead %}
+{% endblock %}
+
 {% if not is_popup %}
 {% block breadcrumbs %}
 <div class="d-flex align-items-center justify-content-between">
@@ -9,10 +30,12 @@
     &rsaquo; <a href="{% url 'admin:app_list' app_label=cl.opts.app_label %}">{{ cl.opts.app_config.verbose_name }}</a>
     &rsaquo; {{ cl.opts.verbose_name_plural|capfirst }}
   </div>
+    {% block search %}{% search_form cl %}{% endblock %}
   {% block object-tools-items %}{% change_list_object_tools %}{% endblock %}
 </div>
 {% endblock %}
 {% endif %}
+
 {% block content %}
 {% if cl.formset and cl.formset.errors %}
 <div class="alert alert-danger" role="alert">
@@ -21,20 +44,69 @@
 </div>
 {{ cl.formset.non_form_errors }}
 {% endif %}
-<div class="card">
-  <div class="card-header">
-    {% block object-tools %}
-    <div class="d-flex align-items-center justify-content-between">
-      <span class="display-6 mb-1">{{ cl.opts.verbose_name_plural|title }}</span>
-      {% block search %}{% search_form cl %}{% endblock %}
+    {% if cl.result_list %}
+    <div class="card">
+     <form id="changelist-form" method="post"{% if cl.formset and cl.formset.is_multipart %} enctype="multipart/form-data"{% endif %} novalidate>{% csrf_token %}
+     {% if cl.formset %}
+          <div>{{ cl.formset.management_form }}</div>
+     {% endif %}
+        <div class="card-header">
+            {% block object-tools %}
+                <div class="d-flex align-items-center justify-content-between">
+                  <span class="display-6 mb-1">{{ cl.opts.verbose_name_plural|title }}</span>
+                    <div class="d-flex align-items-center justify-content-between">
+                        {% if cl.has_filters %}
+                        <button class="btn btn-primary mx-2" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasEnd" aria-controls="offcanvasEnd">{% translate 'Filter' %}</button>
+                        {% endif %}
+                        {% if action_form and actions_on_top and cl.show_admin_actions %}{% admin_actions %}{% endif %}
+                    </div>
+                </div>
+            {% endblock object-tools %}
+        </div>
+        <div class="card-body">
+            {% block result_list %}
+                {% result_list cl %}
+            {% endblock %}
+            {% if action_form and actions_on_bottom and cl.show_admin_actions %}{% admin_actions %}{% endif %}
+        <br />
+            {% block pagination %}{% pagination cl %}{% endblock %}
+        </div>
+      </form>
     </div>
-    {% endblock object-tools %}
-  </div>
-  <div class="card-body">
-    {% block result_list %}
-    {% if action_form and actions_on_top and cl.show_admin_actions %}{% admin_actions %}{% endif %}
-    {% result_list cl %}
-  {% endblock %}
-  </div>
-</div>
+    {% endif %}
+    {% block filters %}
+        {% if cl.has_filters %}
+            <div class="col-lg-3 col-md-6">
+                <div class="mt-3">
+                    <div class="offcanvas offcanvas-end"
+                         tabindex="-1"
+                          id="offcanvasEnd"
+                          aria-labelledby="offcanvasEndLabel">
+                          <div class="offcanvas-header">
+                            <h5 id="offcanvasEndLabel" class="offcanvas-title">{% translate 'Filter' %}</h5>
+                            <button
+                              type="button"
+                              class="btn-close text-reset"
+                              data-bs-dismiss="offcanvas"
+                              aria-label="Close"></button>
+                          </div>
+                          <div class="offcanvas-body">
+                             <div id="changelist-filter">
+                                    {% if cl.is_facets_optional or cl.has_active_filters %}<div id="changelist-filter-extra-actions">
+                                      {% if cl.is_facets_optional %}<h3>
+                                        {% if cl.add_facets %}<a href="{{ cl.remove_facet_link }}" class="hidelink">{% translate "Hide counts" %}</a>
+                                        {% else %}<a href="{{ cl.add_facet_link }}" class="viewlink">{% translate "Show counts" %}</a>{% endif %}
+                                      </h3>{% endif %}
+                                      {% if cl.has_active_filters %}<h3>
+                                        <a href="{{ cl.clear_all_filters_qs }}">&#10006; {% translate "Clear all filters" %}</a>
+                                      </h3>{% endif %}
+                                    </div>{% endif %}
+                                    {% for spec in cl.filter_specs %}{% admin_list_filter cl spec %}{% endfor %}
+                             </div>
+                          </div>
+                    </div>
+                </div>
+            </div>
+        {% endif %}
+      {% endblock %}
 {% endblock content %}
