--- a/moorfoadmin/templates/admin/login.html
+++ b/moorfoadmin/templates/admin/login.html
@@ -2,11 +2,11 @@
 <!DOCTYPE html>
 {% load i18n static addclass_tags %}
 <html
-  lang="en"
-  class="light-style layout-wide customizer-hide"
-  dir="ltr"
-  data-theme="theme-default"
-  data-template="vertical-menu-template-free">
+        lang="en"
+        class="light-style layout-wide customizer-hide"
+        dir="ltr"
+        data-theme="theme-default"
+        data-template="vertical-menu-template-free" xmlns="http://www.w3.org/1999/html">
   <head>
     <meta charset="utf-8" />
     <meta
@@ -15,7 +15,7 @@
     <title>{% if subtitle %}{{ subtitle }} | {% endif %}{{ title }} | {{ site_title|default:_('Django site admin') }}</title>
     <meta name="description" content="" />
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="{% static 'admin/assets/img/favicon/favicon.ico' %}" />
+    <link rel="icon" type="image/x-icon" href="{% static 'admin/../../static/moorfoadmin/assets/img/favicon/favicon.ico' %}" />
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -24,25 +24,25 @@
       href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
       rel="stylesheet" />
 
-    <link rel="stylesheet" href="{% static 'admin/assets/vendor/fonts/boxicons.css' %}" />
+    <link rel="stylesheet" href="{% static 'admin/../../static/moorfoadmin/assets/vendor/fonts/boxicons.css' %}" />
 
     <!-- Core CSS -->
-    <link rel="stylesheet" href="{% static 'admin/assets/vendor/css/core.css' %}" class="template-customizer-core-css" />
-    <link rel="stylesheet" href="{% static 'admin/assets/vendor/css/theme-default.css' %}" class="template-customizer-theme-css" />
-    <link rel="stylesheet" href="{% static 'admin/assets/css/demo.css' %}" />
+    <link rel="stylesheet" href="{% static 'moorfoadmin/assets/vendor/css/core.css' %}" class="template-customizer-core-css" />
+    <link rel="stylesheet" href="{% static 'moorfoadmin/assets/vendor/css/theme-default.css' %}" class="template-customizer-theme-css" />
+    <link rel="stylesheet" href="{% static 'moorfoadmin/assets/css/demo.css' %}" />
 
     <!-- Vendors CSS -->
-    <link rel="stylesheet" href="{% static 'admin/assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css' %}" />
+    <link rel="stylesheet" href="{% static 'moorfoadmin/assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css' %}" />
 
     <!-- Page CSS -->
     <!-- Page -->
-    <link rel="stylesheet" href="{% static 'admin/assets/vendor/css/pages/page-auth.css' %}" />
+    <link rel="stylesheet" href="{% static 'moorfoadmin/assets/vendor/css/pages/page-auth.css' %}" />
 
     <!-- Helpers -->
-    <script src="{% static 'admin/assets/vendor/js/helpers.js' %}"></script>
+    <script src="{% static 'moorfoadmin/assets/vendor/js/helpers.js' %}"></script>
     <!--! Template customizer & Theme config files MUST be included after core stylesheets and helpers.js in the <head> section -->
     <!--? Config:  Mandatory theme config file contain global vars & default theme options, Set your preferred theme option in this file.  -->
-    <script src="{% static 'admin/assets/js/config.js' %}"></script>
+    <script src="{% static 'moorfoadmin/assets/js/config.js' %}"></script>
   </head>
 
   <body>
@@ -61,7 +61,6 @@
                     <svg
                       width="25"
                       viewBox="0 0 25 42"
-                      version="1.1"
                       xmlns="http://www.w3.org/2000/svg"
                       xmlns:xlink="http://www.w3.org/1999/xlink">
                       <defs>
@@ -116,17 +115,17 @@
               <form id="formAuthentication" class="mb-3" action="{{ app_path }}" method="post">
                   {% csrf_token %}
               {% if user.is_authenticated %}
-            <p class="errornote">
-                <div class="callout callout-danger">
-                    <p>
-                        {% blocktrans trimmed %}
-                            You are authenticated as {{ username }}, but are not authorized to
-                            access this page. Would you like to login to a different account?
-                        {% endblocktrans %}
-                    </p>
-                </div>
-            </p>
-            {% endif %}
+                  <p class="errornote">
+                    <div class="callout callout-danger">
+                        <p>
+                            {% blocktrans trimmed %}
+                                You are authenticated as {{ username }}, but are not authorized to
+                                access this page. Would you like to login to a different account?
+                            {% endblocktrans %}
+                        </p>
+                    </div>
+                  </p>
+              {% endif %}
                   {% if form.errors %}
             {% if form.username.errors %}
                 <div class="callout callout-danger">
@@ -190,18 +189,18 @@
     <!-- Core JS -->
     <!-- build:js assets/vendor/js/core.js -->
 
-    <script src="{% static 'admin/assets/vendor/libs/jquery/jquery.js' %}"></script>
-    <script src="{% static 'admin/assets/vendor/libs/popper/popper.js' %}"></script>
-    <script src="{% static 'admin/assets/vendor/js/bootstrap.js' %}"></script>
-    <script src="{% static 'admin/assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.js' %}"></script>
-    <script src="{% static 'admin/assets/vendor/js/menu.js' %}"></script>
+    <script src="{% static 'moorfoadmin/assets/vendor/libs/jquery/jquery.js' %}"></script>
+    <script src="{% static 'moorfoadmin/assets/vendor/libs/popper/popper.js' %}"></script>
+    <script src="{% static 'moorfoadmin/assets/vendor/js/bootstrap.js' %}"></script>
+    <script src="{% static 'moorfoadmin/assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.js' %}"></script>
+    <script src="{% static 'moorfoadmin/assets/vendor/js/menu.js' %}"></script>
 
     <!-- endbuild -->
 
     <!-- Vendors JS -->
 
     <!-- Main JS -->
-    <script src="{% static 'admin/assets/js/main.js' %}"></script>
+    <script src="{% static 'moorfoadmin/assets/js/main.js' %}"></script>
 
     <!-- Page JS -->
 
