--- a/moorfoadmin/templates/moorfoadmin/sidebar.html
+++ b/moorfoadmin/templates/moorfoadmin/sidebar.html
@@ -1,7 +1,7 @@
 
 <aside id="layout-menu" class="layout-menu menu-vertical menu bg-menu-theme">
-        <div class="app-brand demo">
-          <a href="{% url 'admin:index' %}" class="app-brand-link">
+    <div class="app-brand demo">
+        <a href="{% url 'admin:index' %}" class="app-brand-link">
             <span class="app-brand-logo demo">
               <svg width="25" viewBox="0 0 25 42" xmlns="http://www.w3.org/2000/svg"
                 xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -64,25 +64,15 @@
             </a>
           </li>
           {% for app in available_apps %}
-            <li class="menu-item {% if app.name == app.active_app_name %}active{% endif %}">
-              <a href="javascript:void(0);" class="menu-link menu-toggle">
-                <i class="menu-icon tf-icons bx bx-layout"></i>
-                <div data-i18n="Layouts">{{ app.name | truncatechars:16 }}</div>
-              </a>
-
-              <ul class="menu-sub">
-                {% for model in app.models %}
-                  <li class="menu-item">
-                    <a href="{{ model.admin_url }}" class="menu-link">
-                      <div data-i18n="Without menu">{{ model.name }}</div>
-                    </a>
+              <li class="menu-header small text-uppercase"><span class="menu-header-text">{{ app.name | truncatechars:16 }}</span></li>
+              {% for model in app.models %}
+                  <li class="menu-item {% if app.name == app.active_app_name %}active{% endif %}">
+                      <a href="{{ model.admin_url }}" class="menu-link">
+                        <i class="menu-icon tf-icons bx bx-layout"></i>
+                        <div data-i18n="Layouts">{{ model.name }}</div>
+                      </a>
                   </li>
-                {% endfor %}
-              </ul>
-            </li>
-              <script>
-               console.log('{{ app.active_app_name }}')
-              </script>
+              {% endfor %}
           {% endfor %}
         </ul>
       </aside>
